k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: gateway-ingress
  # annotations:
  #   nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  - host: car-rental.local 
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: gateway-svc 
            port:
              number: 8080

  - host: idp-svc
    http:
      paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: idp-svc
              port:
                number: 8090
  - http: 
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: gateway-svc  
            port:
              number: 8080
